# saos_project

./: .env.example  .gitignore  Caddyfile  Dockerfile  README.md  docker-compose.yml  pyproject.toml
logstash/config/: logstash.conf
src/saos_project/: __init__.py  client_secrets.json.example  const.py  db.py  file.py  user.py  views.py
src/saos_project/static/css/: admin.css  doc.css  editor.css  index.css  user.css
src/saos_project/static/js/: doc.js  editor.js  index.js
src/saos_project/templates/: admin.html  doc.html  editor.html  index.html  user.html
